--- a/pr6/css/style.css
+++ b/pr6/css/style.css
@@ -106,19 +106,20 @@ html, body
 {
     display: inline-block;
     margin-top: 2.5%;
-    margin-left: 2%;
+    margin-left: 1.8%;
 }
 .list li:first-child
 {
-    margin-left: -2%;
+    margin-left: -4%;
 }
 .list
 {
+    width: 100%;
+    height: 100%;
     text-align: center;
     font-size: 12px;
     position: relative;
     list-style-type: none;
-    line-height: 1.2;
 }
 .afterpic
 {
