--- a/HC/pr12/style.css
+++ b/HC/pr12/style.css
@@ -8,10 +8,14 @@ html,body
     width: 100%;
     height: 100%;
 }
+.container{
+	width: 45%;
+	margin:0 auto;
+}
 .main
 {
     padding-left: 2%;
-    width: 39%;
+    width: 45%;
     height: 38%;
     margin: 15% auto;
     background: #F2F2F2;
@@ -19,17 +23,17 @@ html,body
 }
 .inside-one
 {
-    width: 41%;
+    width: 39%;
     height: 100%;
     position: relative;
     display: block;
     float: left;
-    border 0;
+    border: 0;
 }
 .inside-two
 {
-    margin-right: 3%;
-    width: 55%;
+    margin-right: 1%;
+    width: 58%;
     height: 70%;
     position: relative;
     display: block;
@@ -46,7 +50,7 @@ html,body
     width: 35%;
     margin-left: 30%;
     margin-top: 15%;
-    background: url("https://web.ovl.io/pr12/lock.png") no-repeat;
+    background: url("https://web.ovl.io/HC/pr12/lock.png") no-repeat;
     background-size: contain;
 }
 .text
@@ -61,8 +65,14 @@ html,body
     margin-top: 10%;
     margin-left: 5%;
 }
+.inp
+{
+	width: 70%;
+	max-width: 150px;
+}
 .submit
 {
+	margin-top: 2%;
     background-color: #E0E6F8;
     padding: 1% 2%;
     border: 2px solid lightgrey;
@@ -73,6 +83,5 @@ h1
 {
     color: red;
     font-family: Comic;
-    margin-left: 24%;
     padding-top: 4%;
 }
